--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 
     <div id="app"></div>
 
-  <script type="text/javascript" src="./scripts.js"></script></body>
+  <script type="text/javascript" src="./scripts.js"></script><script type="text/javascript" src="./vendors.js"></script></body>
 </html>
